--- a/cernst3/css/styles.css
+++ b/cernst3/css/styles.css
@@ -75,6 +75,32 @@ h2 {
 	padding-right: 50px;
 }
 
+
+
+
+/*ROTATE?*/
+
+/*https://stackoverflow.com/questions/16771225/css3-rotate-animation*/
+
+.image {
+	z-index: 100;
+    position: absolute;
+    top: 60px;
+   /* top: 50%;
+    left: 50%;*/
+    width: 120px;
+    height: 120px;
+    margin:-60px 0 0 -60px;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+
+
 /*#f4e399*/
 /*.navbar a{
 	color: #ffae6a;
