--- a/cernst3/css/styles.css
+++ b/cernst3/css/styles.css
@@ -43,6 +43,8 @@ h2 {
 	margin-top: 25px;
 	background-color: #ffc284;
 	border-width: 3px;
+	border-color: #fffb95;
+	/*border-width: 6px solid #ff6a6a;*/
 }
 
 .card-body {
@@ -51,6 +53,21 @@ h2 {
 	background-color: #FFF5C7;
 }
 
+.box {
+    max-width: 95%;
+    height: 200px;
+    border: 10px solid #fffb95;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 35px;
+    /*padding: 25px;*/
+    /*margin: 25px;*/
+    background-color: transparent;
+}
+
+.btn{
+	text-align: center;
+}
 
 
 /*NAVIGATION BAR*/
@@ -88,8 +105,8 @@ h2 {
     top: 60px;
    /* top: 50%;
     left: 50%;*/
-    width: 120px;
-    height: 120px;
+  /*  width: 120px;
+    height: 120px;*/
     margin:-60px 0 0 -60px;
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
