--- a/cernst3/css/styles.css
+++ b/cernst3/css/styles.css
@@ -1,7 +1,4 @@
-/*
-font-family: 'Delius', cursive;
-font-family: 'Love Ya Like A Sister', cursive;
-*/
+/*MAIN CSS SETUP*/
 
 body {
 	font-family: 'Delius', cursive;
@@ -23,39 +20,31 @@ h2 {
 	color: #5a300d;
 }
 
+/* CONTAINERS AND CARDS*/
+
 .container {
 	max-width: 95%;
 }
 
+/*combo of image and headers used in the cards, grouped in class "content-header" as it is the carder head for the content page*/
 .content-header{
 	text-align: center;
 	padding-top: 50px;
 }
 
+/*bootstrap override*/
 .card {
 	margin-top: 25px;
 	background-color: #ffc284;
 	border-width: 3px;
 	border-color: #fffb95;
-	/*border-width: 6px solid #ff6a6a;*/
 }
 
+/*bootstrap override*/
 .card-body {
 	margin: 10px;
 	padding: 25px;
 	background-color: #FFF5C7;
-}
-
-.box {
-    max-width: 95%;
-    height: 200px;
-    border: 10px solid #fffb95;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 35px;
-    /*padding: 25px;*/
-    /*margin: 25px;*/
-    background-color: transparent;
 }
 
 /*BUTTONS AND IMAGES*/
@@ -76,7 +65,6 @@ h2 {
 	border-color: #ff6a6a;
 	color: #3a2b1f;
 }
-
 
 /*NAVIGATION BAR*/
 
@@ -122,7 +110,7 @@ h2 {
     top: 40px;
    /* top: 50%;
     left: 50%;*/
-    w/*idth: 120px;
+    /*idth: 120px;
     height: 120px;*/
     margin:-60px 0 0 -60px;
     -webkit-animation:spin 4s linear infinite;
