--- a/cernst3/css/styles.css
+++ b/cernst3/css/styles.css
@@ -6,7 +6,7 @@ body {
 	color: #3a2b1f;
 }
 
-h1, h2, h5 {
+h1, h2, h3, h5 {
 	font-family: 'Love Ya Like A Sister', cursive;
 }
 
@@ -18,6 +18,10 @@ h1{
 
 h2 {
 	color: #5a300d;
+}
+
+h3, .card-title {
+	font-family: 'Love Ya Like A Sister', cursive;
 }
 
 /* CONTAINERS AND CARDS*/
@@ -98,8 +102,6 @@ h2 {
 	padding-right: 50px;
 }
 
-
-
 /*ROTATE*/
 
 /*https://stackoverflow.com/questions/16771225/css3-rotate-animation*/
@@ -107,7 +109,9 @@ h2 {
 .image {
 	z-index: 100;
     position: absolute;
-    top: 40px;
+    /*top: 10%;
+    left: 200px;*/
+    /*left: 200px;*/
    /* top: 50%;
     left: 50%;*/
     /*idth: 120px;
